# shengji_mac

./: .gitignore  AGENTS.md  README.md  design-qa.md  index.html  package-lock.json  package.json  tsconfig.app.json
.codex/: AGENTS.md  README.md
.github/: AGENTS.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/embedded_models/todo/qwen3-4b-instruct-2507-q4_k_m/: README.txt  manifest.json  prompt_template.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: export_service.rs  local_asr_service.rs  mod.rs  query_service.rs  runtime_observability_service.rs  semantic_service.rs  settings_service.rs  todo_service.rs  transcript_revision_service.rs  transcript_service.rs  workspace_builder.rs
src-tauri/src/commands/: bootstrap.rs  desktop_context.rs  export.rs  jobs.rs  local_asr.rs  mod.rs  model_test.rs  recording.rs  semantic.rs  session.rs  settings.rs  todo.rs  transcript.rs
src-tauri/src/domain/: artifact.rs  bootstrap.rs  correction.rs  desktop.rs  export.rs  local_asr.rs  mod.rs  model_test.rs  processing.rs  provider.rs  recording.rs  runtime.rs  session.rs  settings.rs  speaker.rs  todo.rs  transcript.rs
src-tauri/src/infra/: local_asr_runtime.rs  mod.rs  sqlite.rs
src-tauri/src/jobs/: mod.rs  todo_extraction.rs
src-tauri/src/providers/: mod.rs
src-tauri/src/providers/asr/: local_whisperkit.rs  mod.rs
src-tauri/src/providers/export/: local_file.rs
src-tauri/src/providers/semantic/: legacy_local_llm.rs  minimax_m3.rs  mod.rs
src-tauri/src/providers/speaker/: local_speakerkit.rs  mod.rs
(+151 files in other folders)
